7039586: test/java/util/Collections/Rotate.java failing with hs21-b09

A predicate should not be moved in partial peel optimization since it will invalidate jvm state of its uncommon trap.

Reviewed-by: never